# cozynes

./: Cargo.toml
cozynes/: Cargo.toml
cozynes-gui/: Cargo.toml
cozynes-gui/src/: main.rs
cozynes/src/: bus.rs  cpu.rs  instruction.rs  lib.rs  mem.rs  rom.rs  trace.rs
