[package]
name = "cozynes-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozynes = { path = "../cozynes" }
rand = "0.8.5"
pretty_env_logger = "*"
log = { version = "0.4", features = ["release_max_level_info"] }
macroquad = "0.3.24"
